try another color

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         margin-bottom: 2em;
       }
       .banner {
-        background-color: #f80;
+        background-color: rgb(165, 28, 48);
         font-size: 28px;
         font-weight: bolder;
         color: white;
