--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Libre+Franklin|Libre+Franklin:b|Libre+Franklin:i|Libre+Baskerville|Libre+Baskerville:b|Libre+Baskerville:i"
     />
+    <link rel="shortcut icon" href="./images/logo.png" type="image/png">
     <style>
       body {
         font-family: "Libre Franklin", Arial, Helvetica, sans-serif;
@@ -65,7 +66,7 @@
       .logo,
       .brian {
         position: absolute;
-        left: -100;
+        left: -100px;
         width: 80px;
         border-radius: 10px;
       }
@@ -80,6 +81,35 @@
         .logo {
           top: -10px;
         }
+      }
+      .omnisend-subscribe-form {
+        position: absolute;
+        right: -240px;
+        width: 200px;
+        background-color: #ddd;
+        border: 3px solid rgb(165, 28, 48);
+        padding: 1em;
+      }
+      @media screen and (max-width: 1000px) {
+        .omnisend-subscribe-form {
+          position: relative;
+          float: right;
+          right: 0;
+        }
+      }
+      @media screen and (max-width: 500px) {
+        .omnisend-subscribe-form {
+          float: none;
+        }
+      }
+      .email-me {
+        margin-bottom: 1em;
+      }
+      label {
+        display: block;
+      }
+      input {
+        margin-bottom: 1em;
       }
       ul {
         list-style-type: none;
@@ -102,10 +132,19 @@
       <img src="./images/logo.png" alt="Logo" class="logo" />
       Dream School Test Prep</div>
     </div>
-  <main>
-      <h1>You can pass AP Computer Science A.</h1>
-      <h2>With or without taking the class in school.</h2>
+    <main>
       <div class="imageparent">
+        <h1>You can pass AP Computer Science A.</h1>
+        <h2>With or without taking the class in school.</h2>
+        <form class="omnisend-subscribe-form">
+          <div class="email-me">Email me when the first video is available for
+            purchase (summer/fall 2020):</div>
+          <label for="email">Email</label>
+          <input type="email" id="email" class="omnisend-subscribe-input-email" >
+          <label for="first-name">First name (optional)</label>
+          <input type="text" id="first-name" class="omnisend-subscribe-input-first-name" >
+          <input type=submit value="Sign up">
+        </form>
         <p>
           <strong>
             Shelter in place / homeschool test prep
