--- a/index.html
+++ b/index.html
@@ -84,13 +84,14 @@
       }
       .omnisend-subscribe-form {
         position: absolute;
-        right: -240px;
+        right: -280px;
         width: 200px;
-        background-color: #ddd;
-        border: 3px solid rgb(165, 28, 48);
-        padding: 1em;
+        background-color: #eee;
+        box-shadow: 0 30px 40px rgba(0,0,0,.1);
+        padding: 2em;
+        margin-left: 1em;
       }
-      @media screen and (max-width: 1000px) {
+      @media screen and (max-width: 1100px) {
         .omnisend-subscribe-form {
           position: relative;
           float: right;
@@ -100,6 +101,7 @@
       @media screen and (max-width: 500px) {
         .omnisend-subscribe-form {
           float: none;
+          margin-left: 0;
         }
       }
       .email-me {
