make email required

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <div class="email-me">Email me when the first video is available for
             purchase (summer/fall 2020):</div>
           <label for="email">Email</label>
-          <input type="email" id="email" class="omnisend-subscribe-input-email" >
+          <input type="email" id="email" required class="omnisend-subscribe-input-email" >
           <label for="first-name">First name (optional)</label>
           <input type="text" id="first-name" class="omnisend-subscribe-input-first-name" >
           <input type=submit value="Sign up">
