short course -> short video

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         you’ll have a way to sign up to be notified when it is available.
       </p>
       <p>
-        If enough short-course buyers express interest in a full course, I will
+        If enough short-video buyers express interest in a full course, I will
         create it.
       </p>
       <p>
@@ -256,7 +256,7 @@
       <table>
         <tbody>
           <tr>
-            <td>Short course</td>
+            <td>Short video</td>
             <td class="price">$50 - $150 USD</td>
           </tr>
           <tr>
@@ -264,21 +264,21 @@
             <td class="price">$750 - $1,250 USD</td>
           </tr>
           <tr>
-            <td>Short course + full course for early buyers</td>
+            <td>Short video + full course for early buyers</td>
             <td class="price">$675 - $1,025 USD</td>
           </tr>
         </tbody>
       </table>
-      <h2>Special for early buyers of the short course</h2>
-      <p>Did you notice the short course + full course is <strong>cheaper?</strong></p>
+      <h2>Special for early buyers of the short video</h2>
+      <p>Did you notice the short video + full course is <strong>cheaper?</strong></p>
       <p>
         That’s because If I create a full course and you buy it, I plan to <strong>deduct ➡️ 150% ⬅️</strong> of
-        the short-course price from the full course. But only for early buyers of
-        the short course.
+        the short-video price from the full video. But only for early buyers of
+        the short video.
       </p>
       <p>
         So it will be
-        <strong>cheaper to buy the short course and the long course</strong>, than
+        <strong>cheaper to buy the short video and the long course</strong>, than
         only the long course.
       </p>
       <p>Details to come.</p>
