update pricing text

--- a/index.html
+++ b/index.html
@@ -251,21 +251,21 @@
       </p>
       <h2>Price</h2>
       <p>
-        I haven’t decided on a price yet but I expect it to be something like this:
+        I haven’t decided on a price yet but I expect it to be roughly in this range:
       </p>
       <table>
         <tbody>
           <tr>
             <td>Short video</td>
-            <td class="price">$50 - $150 USD</td>
+            <td class="price">$100 USD</td>
           </tr>
           <tr>
             <td>Full course</td>
-            <td class="price">$750 - $1,250 USD</td>
+            <td class="price">$1,000 USD</td>
           </tr>
           <tr>
             <td>Short video + full course for early buyers</td>
-            <td class="price">$675 - $1,025 USD</td>
+            <td class="price">$850 USD</td>
           </tr>
         </tbody>
       </table>
