--- a/index.html
+++ b/index.html
@@ -146,6 +146,10 @@
         margin-right: 4px;
         float: left;
       }
+      .contact-picture {
+        float: right;
+        width: 140px;
+      }
     </style>
   </head>
   <body>
@@ -282,6 +286,7 @@
         only the long course.
       </p>
       <p>Details to come.</p>
+      <img class="contact-picture" src="./images/contact.jpg" alt="baby with a phone">
       <h2>Get in touch</h2>
       <p>
         Questions? Contact me at
