Changed the name and added an early signup discount

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dream School</title>
+    <title>AP Computer Science Tutorials - Computer Dad</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Libre+Franklin|Libre+Franklin:b|Libre+Franklin:i|Libre+Baskerville|Libre+Baskerville:b|Libre+Baskerville:i"
@@ -126,6 +126,10 @@
       .email-me {
         margin-bottom: 1em;
       }
+      .email-me h2 {
+        margin-top: 1em;
+        color: #222;
+      }
       label {
         display: block;
       }
@@ -149,21 +153,29 @@
       .contact-picture {
         float: right;
         width: 140px;
+        margin-bottom: 1em;
+      }
+      .footnote {
+        clear: right;
       }
     </style>
   </head>
   <body>
     <div class="banner imageparent">
       <img src="./images/logo.png" alt="Logo" class="logo" />
-      Dream School Test Prep</div>
+      Computer Dad</div>
     </div>
     <main>
       <div class="imageparent">
         <h1>You can pass AP Computer Science A.</h1>
         <h2>With or without taking the class in school.</h2>
         <form class="omnisend-subscribe-form">
-          <div class="email-me">Email me when the first video is available for
-            purchase (summer/fall 2020):</div>
+          <div class="email-me">
+            <h2>Join the waitlist</h2>
+            <p>
+              Get notified when I launch and save 15% on the short video. Summer/fall 2020.
+            </p>
+          </div>
           <label for="email">Email</label>
           <input type="email" id="email" required class="omnisend-subscribe-input-email" >
           <label for="first-name">First name (optional)</label>
@@ -174,40 +186,41 @@
           <strong>
             Shelter in place / homeschool test prep
           </strong>. For students who can’t or don’t want to take the
-          class in school.
+          class in school. And students who want some training material
+          to supplement school.
         </p>
         <p>
           <strong
             >Learn in private, at home, by watching videos and doing coding
             exercises</strong
           >. Self-paced.
-          <em>No need to take AP Computer Science at your school.</em>
+          <em>No need to take AP Computer Science at your school. *</em>
         </p>
       </div>
-      <h2>About the instructor</h2>
+      <h2>Who’s your computer dad?</h2>
       <div class="imageparent">
         <img src="./images/brian.jpg" alt="Brian Morearty" class="brian" />
         <p>
-          <strong>Learn from an expert.</strong> I am Brian Morearty, a Silicon
+          I am Brian Morearty, a Silicon
           Valley software engineer with 30+ years experience. Ex-Airbnb, Intuit,
           and Oracle, with a Bachelor’s Degree in Computer Science from UC
           Berkeley.
         </p>
         <p>
-          I’ve taught computer programming for years. Some of the classes I’ve
-          created:
+          <strong>Let me help you.</strong> I’ve taught computer programming
+          for years. Some of the classes I’ve created:
         </p>
       </div>
       <ul>
         <li>
-          Airbnb’s internal Ruby class. I taught all new engineers for 5 years.
+          Airbnb’s internal Ruby class. I taught all new engineers for five years.
         </li>
         <li>
-          The first video tutorial on Docker. I became Docker’s 1st official
+          The first video tutorial on Docker. I became Docker’s first official
           training partner. Sold them the rights to it.
         </li>
         <li>
-          Pluralsight’s 5-star-rated Rails 4.1 Performance Fundamentals course.
+          Pluralsight’s 5-star-rated Rails Performance Fundamentals course.
         </li>
         <li>
           Intuit’s front end engineering class. I taught engineers in QuickBooks
@@ -290,8 +303,15 @@
       <h2>Get in touch</h2>
       <p>
         Questions? Contact me at
-        <a href="https://twitter.com/DreamSchoolPrep">@DreamSchoolPrep</a> on
+        <a href="https://twitter.com/MyComputerDad">@MyComputerDad</a> on
         Twitter.
+      </p>
+      <hr class="footnote">
+      <p>
+        * The College Board does require that you register for the exam at a school.
+        But you can register only for the exam and not the class.
+        Registration can be your own school or another school.
+        I can’t guarantee a particular school will accept your registration.
       </p>
     </main>
     <script type="text/javascript">
