Removed short-video content.
And removed content about using this as a
substitute for the real course.

--- a/index.html
+++ b/index.html
@@ -155,9 +155,6 @@
         width: 140px;
         margin-bottom: 1em;
       }
-      .footnote {
-        clear: right;
-      }
     </style>
   </head>
   <body>
@@ -168,7 +165,7 @@
     <main>
       <div class="imageparent">
         <h1>You can pass AP Computer Science A.</h1>
-        <h2>With or without taking the class in school.</h2>
+        <h2>I’ll help you. I’m your computer dad.</h2>
         <form class="omnisend-subscribe-form">
           <div class="email-me">
             <h2>Join the waitlist</h2>
@@ -178,23 +175,24 @@
           </div>
           <label for="email">Email</label>
           <input type="email" id="email" required class="omnisend-subscribe-input-email" >
+          <label for="phone">Mobile phone (optional)</label>
+          <input type="text" id="first-name" class="omnisend-subscribe-input-first-name" >
           <label for="first-name">First name (optional)</label>
           <input type="text" id="first-name" class="omnisend-subscribe-input-first-name" >
           <input type=submit value="Sign up">
         </form>
         <p>
           <strong>
-            Shelter in place / homeschool test prep
-          </strong>. For students who can’t or don’t want to take the
-          class in school. And students who want some training material
-          to supplement school.
+            Shelter in place / homeschool test prep</strong>. For students who want some
+            extra training material to supplement school.
+        </p>
+        <p>
+          Also great for college students staring to learn Java.
         </p>
         <p>
           <strong
-            >Learn in private, at home, by watching videos and doing coding
-            exercises</strong
+            >Learn in private, at home, by watching videos</strong
           >. Self-paced.
-          <em>No need to take AP Computer Science at your school. *</em>
         </p>
       </div>
       <h2>Who’s your computer dad?</h2>
@@ -213,7 +211,7 @@
       </div>
       <ul>
         <li>
-          Airbnb’s internal Ruby class. I taught all new engineers for five years.
+          Airbnb’s internal Ruby class. I taught all new Airbnb engineers for five years.
         </li>
         <li>
           The first video tutorial on Docker. I became Docker’s first official
@@ -228,22 +226,24 @@
         </li>
       </ul>
       <p>
-        <strong>My training works.</strong> Over six months, I taught my son the
+        <strong>My teaching style works.</strong> Over six months, I taught my son the
         material for AP Computer Science A. He was not taking the class in high
         school. But with my training,
         <strong>he aced the test and got a 5 out of 5</strong>.
       </p>
       <h2>What you will learn</h2>
       <p>
-        The first product I plan to release is a
-        <strong>short tutorial video</strong> (1-2 hours) which will include:
+        This will be a very detailed set of videos covering all the technical material
+        you need to know for AP Computer Science A. This includes:
       </p>
       <ul>
         <li>
           How to set up your computer to write code.
         </li>
         <li>
-          Basic intro to Java.
+          The Java programming language. I teach specifically what’s called the AP Subset
+          of the language. This lets you focus on what you need to know. Without trying
+          to learn things you don’t need.
         </li>
         <li>
           Explanation of the AP CS A test.
@@ -253,65 +253,16 @@
         </li>
       </ul>
       <p>You can use a Mac or PC.</p>
-      <p>
-        <strong>But you can’t learn the AP CS material in an hour or two.</strong>
-        If you buy the first video and want a <strong>full-length course</strong>,
-        you’ll have a way to sign up to be notified when it is available.
-      </p>
-      <p>
-        If enough short-video buyers express interest in a full course, I will
-        create it.
-      </p>
-      <p>
-        The full course will be much longer. It will have everything you need to
-        know to pass AP CS A, including exercises.
-      </p>
       <h2>Price</h2>
       <p>
-        I haven’t decided on a price yet but I expect it to be roughly in this range:
+        I haven’t decided on a price yet but I expect it to be roughly $1,000.
       </p>
-      <table>
-        <tbody>
-          <tr>
-            <td>Short video</td>
-            <td class="price">$100 USD</td>
-          </tr>
-          <tr>
-            <td>Full course</td>
-            <td class="price">$1,000 USD</td>
-          </tr>
-          <tr>
-            <td>Short video + full course for early buyers</td>
-            <td class="price">$850 USD</td>
-          </tr>
-        </tbody>
-      </table>
-      <h2>Special for early buyers of the short video</h2>
-      <p>Did you notice the short video + full course is <strong>cheaper?</strong></p>
-      <p>
-        That’s because If I create a full course and you buy it, I plan to <strong>deduct ➡️ 150% ⬅️</strong> of
-        the short-video price from the full video. But only for early buyers of
-        the short video.
-      </p>
-      <p>
-        So it will be
-        <strong>cheaper to buy the short video and the long course</strong>, than
-        only the long course.
-      </p>
-      <p>Details to come.</p>
       <img class="contact-picture" src="./images/contact.jpg" alt="baby with a phone">
       <h2>Get in touch</h2>
       <p>
         Questions? Contact me at
         <a href="https://twitter.com/MyComputerDad">@MyComputerDad</a> on
         Twitter.
-      </p>
-      <hr class="footnote">
-      <p>
-        * The College Board does require that you register for the exam at a school.
-        But you can register only for the exam and not the class.
-        Registration can be your own school or another school.
-        I can’t guarantee a particular school will accept your registration.
       </p>
     </main>
     <script type="text/javascript">
