Correct usage of the trademark.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AP Computer Science Tutorials - Computer Dad</title>
+    <title>Computer Dad’s Tutorial for the AP® Computer Science Exam</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Libre+Franklin|Libre+Franklin:b|Libre+Franklin:i|Libre+Baskerville|Libre+Baskerville:b|Libre+Baskerville:i"
@@ -155,6 +155,9 @@
         width: 140px;
         margin-bottom: 1em;
       }
+      footer {
+        clear: right;
+      }
     </style>
   </head>
   <body>
@@ -164,8 +167,8 @@
     </div>
     <main>
       <div class="imageparent">
-        <h1>You can pass AP Computer Science A.</h1>
-        <h2>I’ll help you. I’m your computer dad.</h2>
+        <h1>Computer Dad’s Guide to AP<sup>®</sup> Computer Science A.</h1>
+        <h2>You can pass the exam. I’ll help you.</h2>
         <form class="omnisend-subscribe-form">
           <div class="email-me">
             <h2>Join the waitlist</h2>
@@ -187,7 +190,7 @@
             extra training material to supplement school.
         </p>
         <p>
-          Also great for college students staring to learn Java.
+          Also great for college students learning Java.
         </p>
         <p>
           <strong
@@ -227,26 +230,26 @@
       </ul>
       <p>
         <strong>My teaching style works.</strong> Over six months, I taught my son the
-        material for AP Computer Science A. He was not taking the class in high
+        material for AP® Computer Science A. He was not taking the class in high
         school. But with my training,
         <strong>he aced the test and got a 5 out of 5</strong>.
       </p>
       <h2>What you will learn</h2>
       <p>
         This will be a very detailed set of videos covering all the technical material
-        you need to know for AP Computer Science A. This includes:
+        you need to know for AP® Computer Science A. This includes:
       </p>
       <ul>
         <li>
           How to set up your computer to write code.
         </li>
         <li>
-          The Java programming language. I teach specifically what’s called the AP Subset
+          The Java programming language. I teach specifically what’s called the AP® Subset
           of the language. This lets you focus on what you need to know. Without trying
           to learn things you don’t need.
         </li>
         <li>
-          Explanation of the AP CS A test.
+          Explanation of the AP® CS A test.
         </li>
         <li>
           Test-taking strategies and tips.
@@ -264,6 +267,13 @@
         <a href="https://twitter.com/MyComputerDad">@MyComputerDad</a> on
         Twitter.
       </p>
+      <footer>
+        <hr>
+        <i>
+          AP® and Advanced Placement® are trademarks registered by the College Board, which is not affiliated with, 
+          and does not endorse, this site.
+        </i>
+      </footer>
     </main>
     <script type="text/javascript">
       window.omnisend = window.omnisend || [];
