Change the logo.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Libre+Franklin|Libre+Franklin:b|Libre+Franklin:i|Libre+Baskerville|Libre+Baskerville:b|Libre+Baskerville:i"
     />
-    <link rel="shortcut icon" href="./images/logo.png" type="image/png">
+    <link rel="shortcut icon" href="./images/computerdad-logo.png" type="image/png">
     <style>
       body {
         font-family: "Libre Franklin", Arial, Helvetica, sans-serif;
@@ -82,16 +82,13 @@
       .imageparent {
         position: relative;
       }
-      .logo,
-      .brian {
+      .logo {
         position: absolute;
         left: -100px;
         width: 80px;
-        border-radius: 40px;
       }
       @media screen and (max-width: 700px) {
-        .logo,
-        .brian {
+        .logo {
           position: relative;
           left: 0;
           float: left;
@@ -162,13 +159,13 @@
   </head>
   <body>
     <div class="banner imageparent">
-      <img src="./images/logo.png" alt="Logo" class="logo" />
+      <img src="./images/computerdad-logo.png" alt="Logo" class="logo" />
       Computer Dad</div>
     </div>
     <main>
       <div class="imageparent">
         <h1>Computer Dad’s Guide to AP<sup>®</sup> Computer Science A.</h1>
-        <h2>You can pass the exam. I’ll help you.</h2>
+        <h2>Pass the exam. You got this.</h2>
         <form class="omnisend-subscribe-form">
           <div class="email-me">
             <h2>Join the waitlist</h2>
@@ -185,22 +182,18 @@
           <input type=submit value="Sign up">
         </form>
         <p>
-          <strong>
-            Shelter in place / homeschool test prep</strong>. For students who want some
-            extra training material to supplement school.
+          <strong>Online video course</strong> to help you learn Java for AP® Computer Science A.
         </p>
         <p>
-          Also great for college students learning Java.
+          <strong>Learn in private, at home</strong >. Self-paced.
         </p>
         <p>
-          <strong
-            >Learn in private, at home, by watching videos</strong
-          >. Self-paced.
+          <strong>Supplement your class material</strong>.
+          Ideal for shelter in place and homeschool. Also great for college students learning Java.
         </p>
       </div>
       <h2>Who’s your computer dad?</h2>
       <div class="imageparent">
-        <img src="./images/brian.jpg" alt="Brian Morearty" class="brian" />
         <p>
           I am Brian Morearty, a Silicon
           Valley software engineer with 30+ years experience. Ex-Airbnb, Intuit,
@@ -247,12 +240,6 @@
           The Java programming language. I teach specifically what’s called the AP® Subset
           of the language. This lets you focus on what you need to know. Without trying
           to learn things you don’t need.
-        </li>
-        <li>
-          Explanation of the AP® CS A test.
-        </li>
-        <li>
-          Test-taking strategies and tips.
         </li>
       </ul>
       <p>You can use a Mac or PC.</p>
